# polygon

./: .gitignore  Dockerfile  README.md  pyproject.toml  test_kml.py
models/: const.py  coordinate.py  polygon.py
test_kml/: test_kml.kml
tests/: test_polygon.py
