[tool.poetry]
name = "polygon"
version = "0.1.0"
description = ""
authors = ["smezzacapo <stephenmezzo@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
fastkml = "^0.11"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
flake8 = "^3.8.2"
black = "^19.10b0"
flake8-black = "^0.2.0"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.4"
flake8-bandit = "^2.1.2"
safety = "^1.9.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"